# pypi_duckdb_data_engineering

./: Makefile  README.md  pyproject.toml
ingestion/: bigquery.py  models.py  pipeline.py
testes/ingestion/: test_models.py
